[package]
name = "hashed-parachain"
version = "0.1.0"
authors = ["Hashed <https://github.com/hashed-io>"]
description = "Cumulus FRAME-based Substrate Node for the Hashed Network"
license = "MIT"
homepage = "https://hashed.io"
repository = "https://github.com/hashed-io/hashed-substrate"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.188", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.28"
hex-literal = { version = "0.4.1" }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
smallvec = "1.11.0"

# Local
hashed-parachain-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true, tag = "v1.3.0-rc1" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", features = ["rococo-native"], tag = "v1.3.0-rc1" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "v1.3.0-rc1" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.3.0-rc1" }

[features]
default = []
runtime-benchmarks = [
	"hashed-parachain-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"hashed-parachain-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
